--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi-Noir</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/ec08b82533.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- NAV -->
+    <nav></nav>
+    <!-- MAIN -->
+    <div id="main" class="section section-main"></div>
+    <!-- MEMBERS -->
+    <div id="members" class="section section-members"></div>
+    <!-- CTFS -->
+    <div id="ctfs" class="section section-ctfs"></div>
+    <!-- ARTS -->
+    <div id="arts" class="section section-arts"></div>
+    <!-- FOOTER -->
+    <footer></footer>
+  </body>
 </html>
