--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
     <!-- MAIN -->
     <div id="main" class="section section-main">
       <div class="main-left">
-        <h1>test</h1>
+        <img src="./img/Mi-Noir.png" alt="Mi-Noir" width="300px" />
       </div>
       <div class="main-right">
         <div class="main-right-top">
-          <h1>Mi-Noir</h1>
+          <p>Mi-Noir</p>
         </div>
         <div class="main-right-bot">
-          <h3>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat
-            libero quas consequuntur sapiente iste quia quo in cupiditate quod
-            voluptates!
-          </h3>
+          <p>
+            Formed in December 2024, Mi-Noir is a formidable four-person team
+            specializing in Capture The Flag (CTF) competitions, quickly
+            establishing themselves as sharp operators in the cybersecurity
+            arena. Focused on navigating the darkest corners of digital
+            challenges, the group combines diverse technical expertise to
+            exploit vulnerabilities and solve complex hacking puzzles, embodying
+            their name as sleek, efficient digital shadows in the CTF landscape.
+          </p>
         </div>
       </div>
     </div>
@@ -38,10 +42,13 @@
           <img src="./img/p1.png" alt="p1" width="300px" />
         </div>
         <div class="member-nickname"><p>Kude Gulong</p></div>
-        <div class="member-specialty">Reverse Engineering • OSINT • Web</div>
+        <div class="member-specialty">
+          <p>Reverse Engineering • OSINT • Web • Forensic</p>
+        </div>
         <div class="member-quote">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
-          necessitatibus.
+          <p>
+            "The flag is never hidden; it is merely encrypted by complexity."
+          </p>
         </div>
       </div>
       <div class="member-container">
@@ -49,10 +56,11 @@
           <img src="./img/p1.png" alt="p1" width="300px" />
         </div>
         <div class="member-nickname"><p>Ocean Warranty</p></div>
-        <div class="member-specialty">Reverse Engineering • Web • Forensic</div>
+        <div class="member-specialty">
+          <p>Reverse Engineering • Web • Forensic • Crypto • PWN</p>
+        </div>
         <div class="member-quote">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur,
-          suscipit.
+          <p>"If the compiler accepts it, the system yields to it."</p>
         </div>
       </div>
       <div class="member-container">
@@ -60,10 +68,13 @@
           <img src="./img/p1.png" alt="p1" width="300px" />
         </div>
         <div class="member-nickname"><p>QS18</p></div>
-        <div class="member-specialty">OSINT • Forensic • Network</div>
+        <div class="member-specialty">
+          <p>OSINT • Crypto • Forensic • Network • PWN</p>
+        </div>
         <div class="member-quote">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
-          corrupti!
+          <p>
+            "Where others see a barrier, I see the forgotten default password."
+          </p>
         </div>
       </div>
       <div class="member-container">
@@ -72,11 +83,13 @@
         </div>
         <div class="member-nickname"><p>DeathOfLarenuf</p></div>
         <div class="member-specialty">
-          OSING • Forensic • Reverse Engineering
+          <p>OSINT • Forensic • Reverse Engineering • Crypto</p>
         </div>
         <div class="member-quote">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem,
-          temporibus.
+          <p>
+            "Speed is critical, but patience is the key that picks the final
+            lock."
+          </p>
         </div>
       </div>
     </div>
