--- a/index.html
+++ b/index.html
@@ -43,15 +43,24 @@
             <img src="./img/kude.png" alt="KudeGulong" width="300px" />
           </div>
           <div class="member-back">
-            <div class="member-nickname"><p>Kude Gulong</p></div>
-            <div class="member-specialty">
-              <p>Reverse Engineering • OSINT • Web • Forensic</p>
-            </div>
-            <div class="member-quote">
-              <p>
-                "The flag is never hidden; it is merely encrypted by
-                complexity."
-              </p>
+            <div class="member-back-inner">
+              <div class="member-nickname"><p>Kude Gulong</p></div>
+              <div class="member-position"><p>aka. President</p></div>
+              <div class="member-specialty">
+                <p>Reverse Engineering • OSINT • Web • Forensic</p>
+              </div>
+              <div class="member-quote">
+                <p>
+                  "The flag is never hidden; it is merely encrypted by
+                  complexity."
+                </p>
+              </div>
+              <div class="member-sosmed">
+                <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
+                <a href="https://github.com/Nikmfaris"
+                  ><i class="fa-brands fa-github"></i> Nikmfaris</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -62,12 +71,23 @@
             <img src="./img/ocean.png" alt="OceanWarranty" width="300px" />
           </div>
           <div class="member-back">
-            <div class="member-nickname"><p>Ocean Warranty</p></div>
-            <div class="member-specialty">
-              <p>Reverse Engineering • Web • Forensic • Crypto • PWN</p>
-            </div>
-            <div class="member-quote">
-              <p>"If the compiler accepts it, the system yields to it."</p>
+            <div class="member-back-inner">
+              <div class="member-nickname"><p>Ocean Warranty</p></div>
+              <div class="member-position"><p>aka. Vice President</p></div>
+              <div class="member-specialty">
+                <p>Reverse Engineering • Web • Forensic • Crypto • PWN</p>
+              </div>
+              <div class="member-quote">
+                <p>"If the compiler accepts it, the system yields to it."</p>
+              </div>
+              <div class="member-sosmed">
+                <a href="https://oceanwarranty.com/"
+                  ><i class="fa-solid fa-globe"></i> oceanwarranty.com</a
+                ><br />
+                <a href="https://github.com/FanzyBear"
+                  ><i class="fa-brands fa-github"></i> FanzyBear</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -78,15 +98,24 @@
             <img src="./img/qs.png" alt="Qs18" width="300px" />
           </div>
           <div class="member-back">
-            <div class="member-nickname"><p>QS18</p></div>
-            <div class="member-specialty">
-              <p>OSINT • Crypto • Forensic • Network • PWN</p>
-            </div>
-            <div class="member-quote">
-              <p>
-                "Where others see a barrier, I see the forgotten default
-                password."
-              </p>
+            <div class="member-back-inner">
+              <div class="member-nickname"><p>QS18</p></div>
+              <div class="member-position"><p>aka. Normal</p></div>
+              <div class="member-specialty">
+                <p>OSINT • Crypto • Forensic • Network • PWN</p>
+              </div>
+              <div class="member-quote">
+                <p>
+                  "Where others see a barrier, I see the forgotten default
+                  password."
+                </p>
+              </div>
+              <div class="member-sosmed">
+                <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
+                <a href="https://github.com/muhdsyahirk"
+                  ><i class="fa-brands fa-github"></i> muhdsyahirk</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -97,15 +126,24 @@
             <img src="./img/death.png" alt="DeathOfLarenuf" width="300px" />
           </div>
           <div class="member-back">
-            <div class="member-nickname"><p>DeathOfLarenuf</p></div>
-            <div class="member-specialty">
-              <p>OSINT • Forensic • Reverse Engineering • Crypto</p>
-            </div>
-            <div class="member-quote">
-              <p>
-                "Speed is critical, but patience is the key that picks the final
-                lock."
-              </p>
+            <div class="member-back-inner">
+              <div class="member-nickname"><p>DeathOfLarenuf</p></div>
+              <div class="member-position"><p>aka. Normal</p></div>
+              <div class="member-specialty">
+                <p>OSINT • Forensic • Reverse Engineering • Crypto</p>
+              </div>
+              <div class="member-quote">
+                <p>
+                  "Speed is critical, but patience is the key that picks the
+                  final lock."
+                </p>
+              </div>
+              <div class="member-sosmed">
+                <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
+                <a href="https://github.com/erzascarlet63"
+                  ><i class="fa-brands fa-github"></i> erzascarlet63</a
+                >
+              </div>
             </div>
           </div>
         </div>
