--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
   </head>
   <body>
     <!-- NAV -->
-    <nav></nav>
+    <nav>
+      <div class="nav-container">
+        <ul class="nav-menu">
+          <li><a href="#members">LINE-UP</a></li>
+          <li>
+            <a href="#main"
+              ><img src="./img/Logo.png" alt="MI-NOIR" width="70px"
+            /></a>
+          </li>
+          <li><a href="#ctfs">CTFS&nbsp&nbsp&nbsp&nbsp</a></li>
+        </ul>
+      </div>
+    </nav>
     <!-- MAIN -->
     <div id="main" class="section section-main">
       <div class="main-left">
@@ -20,7 +32,7 @@
       </div>
       <div class="main-right">
         <div class="main-right-top">
-          <p>Mi-Noir</p>
+          <p>MI-NOIR</p>
         </div>
         <div class="main-right-bot">
           <p>
@@ -37,112 +49,115 @@
     </div>
     <!-- MEMBERS -->
     <div id="members" class="section section-members">
-      <div class="member-container">
-        <div class="member-inner">
-          <div class="member-front">
-            <img src="./img/kude.png" alt="KudeGulong" width="300px" />
-          </div>
-          <div class="member-back">
-            <div class="member-back-inner">
-              <div class="member-nickname"><p>Kude Gulong</p></div>
-              <div class="member-position"><p>aka. President</p></div>
-              <div class="member-specialty">
-                <p>Reverse Engineering • OSINT • Web • Forensic</p>
-              </div>
-              <div class="member-quote">
-                <p>
-                  "The flag is never hidden; it is merely encrypted by
-                  complexity."
-                </p>
-              </div>
-              <div class="member-sosmed">
-                <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
-                <a href="https://github.com/Nikmfaris"
-                  ><i class="fa-brands fa-github"></i> Nikmfaris</a
-                >
+      <div class="member-title"><p>LINE-UP</p></div>
+      <div class="member-members">
+        <div class="member-container">
+          <div class="member-inner">
+            <div class="member-front">
+              <img src="./img/kude.png" alt="KudeGulong" width="300px" />
+            </div>
+            <div class="member-back">
+              <div class="member-back-inner">
+                <div class="member-nickname"><p>Kude Gulong</p></div>
+                <div class="member-position"><p>aka President</p></div>
+                <div class="member-specialty">
+                  <p>Reverse Engineering • OSINT • Web • Forensic</p>
+                </div>
+                <div class="member-quote">
+                  <p>
+                    "The flag is never hidden; it is merely encrypted by
+                    complexity."
+                  </p>
+                </div>
+                <div class="member-sosmed">
+                  <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
+                  <a href="https://github.com/Nikmfaris"
+                    ><i class="fa-brands fa-github"></i> Nikmfaris</a
+                  >
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="member-container">
-        <div class="member-inner">
-          <div class="member-front">
-            <img src="./img/ocean.png" alt="OceanWarranty" width="300px" />
-          </div>
-          <div class="member-back">
-            <div class="member-back-inner">
-              <div class="member-nickname"><p>Ocean Warranty</p></div>
-              <div class="member-position"><p>aka. Vice President</p></div>
-              <div class="member-specialty">
-                <p>Reverse Engineering • Web • Forensic • Crypto • PWN</p>
-              </div>
-              <div class="member-quote">
-                <p>"If the compiler accepts it, the system yields to it."</p>
-              </div>
-              <div class="member-sosmed">
-                <a href="https://oceanwarranty.com/"
-                  ><i class="fa-solid fa-globe"></i> oceanwarranty.com</a
-                ><br />
-                <a href="https://github.com/FanzyBear"
-                  ><i class="fa-brands fa-github"></i> FanzyBear</a
-                >
+        <div class="member-container">
+          <div class="member-inner">
+            <div class="member-front">
+              <img src="./img/ocean.png" alt="OceanWarranty" width="300px" />
+            </div>
+            <div class="member-back">
+              <div class="member-back-inner">
+                <div class="member-nickname"><p>Ocean Warranty</p></div>
+                <div class="member-position"><p>aka Vice President</p></div>
+                <div class="member-specialty">
+                  <p>Reverse Engineering • Web • Forensic • Crypto • PWN</p>
+                </div>
+                <div class="member-quote">
+                  <p>"If the compiler accepts it, the system yields to it."</p>
+                </div>
+                <div class="member-sosmed">
+                  <a href="https://oceanwarranty.com/"
+                    ><i class="fa-solid fa-globe"></i> oceanwarranty.com</a
+                  ><br />
+                  <a href="https://github.com/FanzyBear"
+                    ><i class="fa-brands fa-github"></i> FanzyBear</a
+                  >
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="member-container">
-        <div class="member-inner">
-          <div class="member-front">
-            <img src="./img/qs.png" alt="Qs18" width="300px" />
-          </div>
-          <div class="member-back">
-            <div class="member-back-inner">
-              <div class="member-nickname"><p>QS18</p></div>
-              <div class="member-position"><p>aka. Normal</p></div>
-              <div class="member-specialty">
-                <p>OSINT • Crypto • Forensic • Network • PWN</p>
-              </div>
-              <div class="member-quote">
-                <p>
-                  "Where others see a barrier, I see the forgotten default
-                  password."
-                </p>
-              </div>
-              <div class="member-sosmed">
-                <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
-                <a href="https://github.com/muhdsyahirk"
-                  ><i class="fa-brands fa-github"></i> muhdsyahirk</a
-                >
+        <div class="member-container">
+          <div class="member-inner">
+            <div class="member-front">
+              <img src="./img/qs.png" alt="Qs18" width="300px" />
+            </div>
+            <div class="member-back">
+              <div class="member-back-inner">
+                <div class="member-nickname"><p>QS18</p></div>
+                <div class="member-position"><p>aka Burden</p></div>
+                <div class="member-specialty">
+                  <p>OSINT • Crypto • Forensic • Network • PWN</p>
+                </div>
+                <div class="member-quote">
+                  <p>
+                    "Where others see a barrier, I see the forgotten default
+                    password."
+                  </p>
+                </div>
+                <div class="member-sosmed">
+                  <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
+                  <a href="https://github.com/muhdsyahirk"
+                    ><i class="fa-brands fa-github"></i> muhdsyahirk</a
+                  >
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="member-container">
-        <div class="member-inner">
-          <div class="member-front">
-            <img src="./img/death.png" alt="DeathOfLarenuf" width="300px" />
-          </div>
-          <div class="member-back">
-            <div class="member-back-inner">
-              <div class="member-nickname"><p>DeathOfLarenuf</p></div>
-              <div class="member-position"><p>aka. Normal</p></div>
-              <div class="member-specialty">
-                <p>OSINT • Forensic • Reverse Engineering • Crypto</p>
-              </div>
-              <div class="member-quote">
-                <p>
-                  "Speed is critical, but patience is the key that picks the
-                  final lock."
-                </p>
-              </div>
-              <div class="member-sosmed">
-                <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
-                <a href="https://github.com/erzascarlet63"
-                  ><i class="fa-brands fa-github"></i> erzascarlet63</a
-                >
+        <div class="member-container">
+          <div class="member-inner">
+            <div class="member-front">
+              <img src="./img/death.png" alt="DeathOfLarenuf" width="300px" />
+            </div>
+            <div class="member-back">
+              <div class="member-back-inner">
+                <div class="member-nickname"><p>DeathOfLarenuf</p></div>
+                <div class="member-position"><p>aka IDK</p></div>
+                <div class="member-specialty">
+                  <p>OSINT • Forensic • Reverse Engineering • Crypto</p>
+                </div>
+                <div class="member-quote">
+                  <p>
+                    "Speed is critical, but patience is the key that picks the
+                    final lock."
+                  </p>
+                </div>
+                <div class="member-sosmed">
+                  <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
+                  <a href="https://github.com/erzascarlet63"
+                    ><i class="fa-brands fa-github"></i> erzascarlet63</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -151,8 +166,6 @@
     </div>
     <!-- CTFS -->
     <div id="ctfs" class="section section-ctfs"></div>
-    <!-- ARTS -->
-    <div id="arts" class="section section-arts"></div>
     <!-- FOOTER -->
     <footer></footer>
   </body>
