--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="member-sosmed">
                   <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
-                  <a href="https://github.com/Nikmfaris"
+                  <a href="https://github.com/Nikmfaris" target="_blank"
                     ><i class="fa-brands fa-github"></i> Nikmfaris</a
                   >
                 </div>
@@ -95,10 +95,10 @@
                   <p>"If the compiler accepts it, the system yields to it."</p>
                 </div>
                 <div class="member-sosmed">
-                  <a href="https://oceanwarranty.com/"
+                  <a href="https://oceanwarranty.com/" target="_blank"
                     ><i class="fa-solid fa-globe"></i> oceanwarranty.com</a
                   ><br />
-                  <a href="https://github.com/FanzyBear"
+                  <a href="https://github.com/FanzyBear" target="_blank"
                     ><i class="fa-brands fa-github"></i> FanzyBear</a
                   >
                 </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="member-sosmed">
                   <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
-                  <a href="https://github.com/muhdsyahirk"
+                  <a href="https://github.com/muhdsyahirk" target="_blank"
                     ><i class="fa-brands fa-github"></i> muhdsyahirk</a
                   >
                 </div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="member-sosmed">
                   <a href="#"><i class="fa-solid fa-globe"></i> None</a><br />
-                  <a href="https://github.com/erzascarlet63"
+                  <a href="https://github.com/erzascarlet63" target="_blank"
                     ><i class="fa-brands fa-github"></i> erzascarlet63</a
                   >
                 </div>
@@ -167,6 +167,14 @@
     <!-- CTFS -->
     <div id="ctfs" class="section section-ctfs"></div>
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <div class="footer-inside">
+        <p>
+          <i class="fa-regular fa-copyright"></i> 2025 <span>Mi-Noir</span>.
+          Some Rights Reserved.
+        </p>
+        <p>Made by <span>Qs18</span>.</p>
+      </div>
+    </footer>
   </body>
 </html>
