CTFs Chips Front

--- a/index.html
+++ b/index.html
@@ -169,20 +169,137 @@
       <div class="ctfs-title"><p>CTFS PARTICIPATION</p></div>
       <div class="ctfs-container">
         <div class="ctfs-container-group">
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="300px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="300px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="300px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img
+                  src="./img/CTF-Glacier.png"
+                  alt="GlacierCTF"
+                  width="300px"
+                />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        <!-- TO MAKE IT INFINITY -->
         <div aria-hidden class="ctfs-container-group">
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
-          <div class="ctfs-list"></div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="300px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="300px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="300px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img
+                  src="./img/CTF-Glacier.png"
+                  alt="GlacierCTF"
+                  width="300px"
+                />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-placement"><p>60 of 760</p></div>
+                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
