CTFs Chips Back

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
             establishing themselves as sharp operators in the cybersecurity
             arena. Focused on navigating the darkest corners of digital
             challenges, the group combines diverse technical expertise to
-            exploit vulnerabilities and solve complex hacking puzzles, embodying
-            their name as sleek, efficient digital shadows in the CTF landscape.
+            exploit vulnerabilities and solve complex hacking puzzles.
+            <br /><br />
+            <a target="_blank" href="https://ctftime.org/team/380574"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i> Mi-Noir
+              CTFtime</a
+            >
           </p>
         </div>
       </div>
@@ -172,14 +176,19 @@
           <div class="ctfs-list">
             <div class="ctf-inner">
               <div class="ctf-front">
-                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="300px" />
+                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="325px" />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-placement"><p>68 out of 760 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -187,14 +196,19 @@
           <div class="ctfs-list">
             <div class="ctf-inner">
               <div class="ctf-front">
-                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="300px" />
+                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="325px" />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>L3akCTF</p></div>
+                  <div class="ctf-placement"><p>233 out of 1587 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -202,14 +216,19 @@
           <div class="ctfs-list">
             <div class="ctf-inner">
               <div class="ctf-front">
-                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="300px" />
+                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="325px" />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>UMDCTF</p></div>
+                  <div class="ctf-placement"><p>203 out of 708 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -220,15 +239,20 @@
                 <img
                   src="./img/CTF-Glacier.png"
                   alt="GlacierCTF"
-                  width="300px"
+                  width="325px"
                 />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>GlacierCTF</p></div>
+                  <div class="ctf-placement"><p>198 out of 503 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -239,14 +263,19 @@
           <div class="ctfs-list">
             <div class="ctf-inner">
               <div class="ctf-front">
-                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="300px" />
+                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="325px" />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-placement"><p>68 out of 760 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -254,14 +283,19 @@
           <div class="ctfs-list">
             <div class="ctf-inner">
               <div class="ctf-front">
-                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="300px" />
+                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="325px" />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>L3akCTF</p></div>
+                  <div class="ctf-placement"><p>233 out of 1587 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -269,14 +303,19 @@
           <div class="ctfs-list">
             <div class="ctf-inner">
               <div class="ctf-front">
-                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="300px" />
+                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="325px" />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>UMDCTF</p></div>
+                  <div class="ctf-placement"><p>203 out of 708 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -287,15 +326,107 @@
                 <img
                   src="./img/CTF-Glacier.png"
                   alt="GlacierCTF"
-                  width="300px"
+                  width="325px"
                 />
               </div>
               <div class="ctf-back">
                 <div class="ctf-back-inner">
-                  <div class="ctf-name"><p>DawgCTF</p></div>
                   <div class="ctf-year"><p>2025</p></div>
-                  <div class="ctf-placement"><p>60 of 760</p></div>
-                  <div class="ctf-writeup"><a href="#">Writeup</a></div>
+                  <div class="ctf-name"><p>GlacierCTF</p></div>
+                  <div class="ctf-placement"><p>198 out of 503 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- TO MAKE IT INFINITY PT. 2 -->
+        <div aria-hidden class="ctfs-container-group">
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-Dawg.png" alt="DawgCTF" width="325px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-name"><p>DawgCTF</p></div>
+                  <div class="ctf-placement"><p>68 out of 760 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-L3ak.png" alt="L3akCTF" width="325px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-name"><p>L3akCTF</p></div>
+                  <div class="ctf-placement"><p>233 out of 1587 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img src="./img/CTF-UMD.png" alt="UMDCTF" width="325px" />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-name"><p>UMDCTF</p></div>
+                  <div class="ctf-placement"><p>203 out of 708 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="ctfs-list">
+            <div class="ctf-inner">
+              <div class="ctf-front">
+                <img
+                  src="./img/CTF-Glacier.png"
+                  alt="GlacierCTF"
+                  width="325px"
+                />
+              </div>
+              <div class="ctf-back">
+                <div class="ctf-back-inner">
+                  <div class="ctf-year"><p>2025</p></div>
+                  <div class="ctf-name"><p>GlacierCTF</p></div>
+                  <div class="ctf-placement"><p>198 out of 503 teams</p></div>
+                  <div class="ctf-writeup">
+                    <a href="#"
+                      ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      Writeup</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
