Redo the top section

--- a/index.html
+++ b/index.html
@@ -65,22 +65,46 @@
       </div>
       <div class="main-right">
         <div class="main-right-top">
-          <p>MI-NOIR</p>
+          <p class="mi-noir-main-title">MI-NOIR</p>
+          <p class="mi-noir-phonetic-spelling">/miː-nwɑː/</p>
         </div>
         <div class="main-right-bot">
-          <p>
-            Formed in December 2024, Mi-Noir is a formidable four-person team
-            specializing in Capture The Flag (CTF) competitions, quickly
-            establishing themselves as sharp operators in the cybersecurity
-            arena. Focused on navigating the darkest corners of digital
-            challenges, the group combines diverse technical expertise to
-            exploit vulnerabilities and solve complex hacking puzzles.
-            <br /><br />
+          <div class="mi-noir-definition">
+            <p class="mi-noir-pos">Adjective</p>
+            <p class="mi-noir-real-definition">
+              1. "mi-noir" creates the term for
+              <span class="text-underline">medium-dark</span>.
+            </p>
+            <p class="mi-noir-definition-ex">"That thing looks mi-noir"</p>
+          </div>
+          <div class="mi-noir-definition">
+            <p class="mi-noir-pos">Noun</p>
+            <p class="mi-noir-real-definition">
+              1. Formed in December 2024, Mi-Noir is a formidable four-person
+              team specializing in
+              <span class="text-underline">Capture The Flag (CTF)</span>
+              competitions,
+            </p>
+            <p class="mi-noir-definition-ex">
+              "quickly establishing themselves as sharp operators in the
+              cybersecurity arena."
+            </p>
+            <p class="mi-noir-real-definition">
+              2. Focused on navigating the
+              <span class="text-underline">darkest corners</span>
+              of digital challenges,
+            </p>
+            <p class="mi-noir-definition-ex">
+              "the group combines diverse technical expertise to exploit
+              vulnerabilities and solve complex hacking puzzles."
+            </p>
+          </div>
+          <div class="mi-noir-ctftime">
             <a target="_blank" href="https://ctftime.org/team/380574"
               ><i class="fa-solid fa-arrow-up-right-from-square"></i> Mi-Noir
               CTFtime</a
             >
-          </p>
+          </div>
         </div>
       </div>
     </div>
@@ -257,7 +281,7 @@
                   <div class="ctf-name"><p>UMDCTF</p></div>
                   <div class="ctf-placement"><p>203 out of 708 teams</p></div>
                   <div class="ctf-writeup">
-                    <a href="#"
+                    <a href="./ctf/umdctf/umdctf.html"
                       ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                       Writeup</a
                     >
@@ -344,7 +368,7 @@
                   <div class="ctf-name"><p>UMDCTF</p></div>
                   <div class="ctf-placement"><p>203 out of 708 teams</p></div>
                   <div class="ctf-writeup">
-                    <a href="#"
+                    <a href="./ctf/umdctf/umdctf.html"
                       ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                       Writeup</a
                     >
@@ -431,7 +455,7 @@
                   <div class="ctf-name"><p>UMDCTF</p></div>
                   <div class="ctf-placement"><p>203 out of 708 teams</p></div>
                   <div class="ctf-writeup">
-                    <a href="#"
+                    <a href="./ctf/umdctf/umdctf.html"
                       ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                       Writeup</a
                     >
@@ -474,7 +498,7 @@
           <i class="fa-regular fa-copyright"></i> 2025 <span>Mi-Noir</span>.
           Some Rights Reserved.
         </p>
-        <p>Made by <span>Qs18</span>.</p>
+        <p>Made by <span>Mi-Noir</span>.</p>
       </div>
     </footer>
   </body>
